# ntfy-bridge

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  requests.http
.github/workflows/: docker-build.yaml  release-please.yaml
docs/: webhook-docs.md
docs/playloads/: netdata-alert-critical.json  netdata-alert-recovered.json  netdata-alert-warning.json  netdata-reachability-reachable.json  netdata-reachability-unreachable.json  netdata-token.json
src/: app.rs  config.rs  logging.rs  main.rs  state.rs
src/ntfy/: builder.rs  client.rs  http_client.rs  mod.rs
src/routes/: dump.rs  mod.rs  robots.rs
src/routes/netdata/: handler.rs  mod.rs  models.rs
src/routes/netdata/models/: alert.rs  mod.rs  payload.rs  reachability.rs  shared.rs  token.rs
