[package]
name = "ntfy-bridge"
version = "1.0.0"
edition = "2024"

[dependencies]
anyerror = "0.1.13"
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.8"
axum-client-ip = "1.3.1"
clap = { version = "4.6.0", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures-util = "0.3.32"
http-body-util = "0.1.3"
humantime = "2.3.0"
ntfy = "0.9.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["full"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["auth", "set-header", "trace", "util"] }
tower_governor = { version = "0.8.0", features = ["axum", "tracing"] }
tracing = "0.1.44"
tracing-panic = "0.1.2"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
trait-variant = "0.1.2"
url = "2.5.8"

[dev-dependencies]
mockall = "0.14.0"
